fixed bug and start scraping

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,6 +1,6 @@
 %h2 Registrazione
 
-= error_messages_for @user
+- error_messages_for @user
 
 = form_for @user do |f|
   = f.label :first_name, tf("Nome", "First Name")
