--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -961,3 +961,29 @@ form label.error
     
 .pagination
   margin: 10px 0
+  
+  
+#tabs_lavoro
+  padding-left: 18px
+  table
+    border: 1px solid #999
+    text-align: center
+    margin: 4px 0 14px
+    td, th
+      border: 1px solid #999
+      border-left: none
+      border-right: none  
+      background: #fafafa
+      padding: 1px 8px
+    thead th
+      background: #486B48
+      color: #FFF
+      padding-top: 4px
+      padding-bottom: 4px
+        
+    tr.total
+      td
+        padding-top: 4px
+        padding-bottom: 4px
+        background: #c00
+        color: #FFF
