--- a/app/views/forms/_pdf.html.haml
+++ b/app/views/forms/_pdf.html.haml
@@ -54,3 +54,4 @@
         = f.check_box :confirm, class: "checkbox"
         = f.label :confirm, label, {checked: "checked"}
       = f.submit tf("Scarica", "Download"), class: "submit"
+.pdf_clear
