--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -790,13 +790,16 @@ input.radio2
     label
       float: left
 
+.pdf_clear
+  clear: left
+  
 .forms_pdf
-  width: 60%
-  margin: 0 0 15px 0
-  padding: 0px 0px 10px 0
-  float: left
+  width: 400px
   background: none
+  float: left
   form  
+    margin: 0 0 15px 0
+    padding: 0px 0px 10px 0
   input, label
   input 
   div 
