--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -5,6 +5,11 @@ input[type="submit"]::-moz-focus-inner,
 input[type="file"] > input[type="button"]::-moz-focus-inner {
   border: none; }
 
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
 *, html, body {
   margin: 0;
   padding: 0; }
@@ -429,8 +434,8 @@ div#home_swf {
 
 ul.subnav {
   position: absolute;
-  width: 150px;
-  right: -151px;
+  width: 148px;
+  right: -146px;
   z-index: 3; }
 
 #nav li .subnav.sub2 {
@@ -739,8 +744,7 @@ input.radio2 {
 
 .forms_pdf {
   width: 400px;
-  background: none;
-  float: left; }
+  background: none; }
   .forms_pdf form {
     margin: 0 0 15px 0;
     padding: 0px 0px 10px 0; }
@@ -766,6 +770,7 @@ input.radio2 {
 
 .forms_pdf.bg {
   background: #dddddd;
+  float: left;
   padding-left: 20px; }
 
 #galleria {
