--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -112,6 +112,34 @@ input[type="file"] > input[type="button"]
   -webkit-box-shadow: $x $y $radius $color
   box-shadow: $x $y $radius $color
 
+// reset
+
+// html, body, div, span, applet, object, iframe,
+// h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+// a, abbr, acronym, address, big, cite, code,
+// del, dfn, em, img, ins, kbd, q, s, samp,
+// small, strike, strong, sub, sup, tt, var,
+// b, u, i, center,
+// dl, dt, dd, ol, ul, li,
+// fieldset, form, label, legend,
+// table, caption, tbody, tfoot, thead, tr, th, td,
+// article, aside, canvas, details, embed, 
+// figure, figcaption, footer, header, hgroup, 
+// menu, nav, output, ruby, section, summary,
+// time, mark, audio, video 
+//   margin: 0
+//   padding: 0
+//   border: 0
+//   font-size: 100%
+//   font: inherit
+//   vertical-align: baseline
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section 
+  display: block
+
+
 // clearfix
 
 *, html, body
@@ -545,11 +573,12 @@ div#home_swf
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#211949', endColorstr='#2d2264',GradientType=0 )
   
   
-$subnav_width: 150px
+//$subnav_width: 150px
+$subnav_width: 148px
 ul.subnav
   position: absolute
   width: $subnav_width
-  right: -$subnav_width - 1px
+  right: -$subnav_width + 2px
   z-index: 3
 
 #nav li 
@@ -796,7 +825,6 @@ input.radio2
 .forms_pdf
   width: 400px
   background: none
-  float: left
   form  
     margin: 0 0 15px 0
     padding: 0px 0px 10px 0
@@ -824,6 +852,7 @@ input.radio2
       width: 130px
 .forms_pdf.bg
   background: #DDD
+  float: left
   padding-left: 20px
   
 #galleria
