upgraded to rails 3.1, added newsletter

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,7 @@
 %h2 Utenti
 
+= link_to "Newsletter", [:user_newsletter], class: "button"
+
 %h4 Data ultima modifica - Nome
 %ul#users
   = render @users
