--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -962,6 +962,11 @@ form label.error
   display: block
   position: relative
   top: -5px
+
+.image_left
+  img
+    float: left
+    margin: 4px 9px 0 0
   
 
 #content
