updated gemfile and year on form dates

--- a/app/views/forms/_borse_di_studio.html.haml
+++ b/app/views/forms/_borse_di_studio.html.haml
@@ -1,5 +1,5 @@
 .borse_di_studio
-  - form_for @user do |f|
+  = form_for @user do |f|
     = f.hidden_field :tmp_form, value: "borsa"
     .preradio
   
