--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,7 +1,7 @@
 = error_messages_for @user
 
 .forms_form
-  - form_for @user do |f|
+  = form_for @user do |f|
     = hidden_field_tag "form", "form"
     = f.hidden_field :tmp_form, value: "form"
     .checkboxes
