--- a/app/views/user_mailer/admin_borsa.haml
+++ b/app/views/user_mailer/admin_borsa.haml
@@ -60,10 +60,10 @@
 .clear
 = render partial: "users/user_infos"
 
-- infos = ["Altri titoli di studio/corsi di specializzazione frequentati", "Esperienze (anche amatoriali) nel campo specifico del corso prescelto", "Esperienze di lavoro maturate", "Cosa mi spinge a compiere studi in questo ambito", "Altre Info. utili, idonee a valutare il mio interesse a partecipare al corso"] 
-- 5.times do |i|
-  %p.tit.bold #{infos[i]}:
-  %p.val= @user.send("info#{i}")
+-#- infos = ["Altri titoli di studio/corsi di specializzazione frequentati", "Esperienze (anche amatoriali) nel campo specifico del corso prescelto", "Esperienze di lavoro maturate", "Cosa mi spinge a compiere studi in questo ambito", "Altre Info. utili, idonee a valutare il mio interesse a partecipare al corso"] 
+-#- 5.times do |i|
+-#  %p.tit.bold #{infos[i]}:
+-#  %p.val= @user.send("info#{i}")
 
     
 .clear
