changed text align

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -259,7 +259,7 @@ a:hover
 #content p
   text-shadow: 1px 2px 0px #FFF
   margin-bottom: 12px
-  text-align: justify
+  text-align: left
   
 #content .master p  
   width: 59%  
