--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,9 +1,10 @@
-- title tr(@page).title
+- unless @page.id == 35 # news
+  - title tr(@page).title
 
 -#- if @page.id != 1 && @page.root? && @page.id != 6 && @page.id != 8 && @page.id != 13 #form
 -#  = image_tag "image4.jpg", id: "gallery"
 
-- if @page.id == 1 # home
+- if @page.id == 35 # news
   - content_for :jquery do
     :plain
       var title = "Accademia Cappiello - Firenze"
@@ -18,8 +19,8 @@
       <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like-box href="http://www.facebook.com/pages/Accademia-dArte-e-Design-Leonetto-Cappiello-Firenze/124282164308467" width="292" show_faces="true" stream="true" header="false"></fb:like-box>
   
 - # borse di studio, form
-#inner{ class: "#{"home" if home_page?} #{"full" unless @page.root? && @page.id != 6 && @page.id != 8 && @page.id != 13 && @page.id != 10 && @page.id != 29 && @page.id != 7 && @page.id != 5 && @page.id != 4 && @page.id != 30}" }
-  - if @page.id == 1
+#inner{ class: "#{"home" if home_page? || @page.id == 1} #{"full" unless @page.root? && @page.id != 6 && @page.id != 8 && @page.id != 13 && @page.id != 10 && @page.id != 29 && @page.id != 7 && @page.id != 5 && @page.id != 4 && @page.id != 30}" }
+  - if @page.id == 1 || @page.id == 35 # news
     = render partial: "elements/home"
   - else
     = render partial: "elements/standard"
