--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -264,7 +264,7 @@ a:hover
 #content .master p  
   width: 59%  
   
-#content .home p, #content #aside p, #content .article_cont p
+#content .home p, #content .news p, #content #aside p, #content .article_cont p
   width: 100%
 
 #content #aside p
@@ -601,7 +601,7 @@ ul.subnav
 #inner
   width: 55%
   
-#inner.home
+#inner.home, #inner.news
   width: 100%
 
 #inner.full
@@ -611,6 +611,17 @@ ul.subnav
   margin-top: 30px
   h2 
     margin-bottom: 20px
+
+
+.pages.index #inner.home // news
+  div
+    font-size: 1em
+    clear: left
+    h4
+      font-size: 1.2em
+      padding-top: 20px
+      margin-bottom: 10px
+  
 
 ul#selection 
   width: 280px
@@ -640,7 +651,7 @@ $video_home_height: 270px
     width: $video_width
     height: $video_height
 
-.home #video 
+.home #video, .news #video
   float: none
   iframe
     width: $video_home_width
@@ -963,11 +974,12 @@ form label.error
   position: relative
   top: -5px
 
-.image_left
-  img
-    float: left
-    margin: 4px 9px 0 0
-  
+.image_left img, img.image_left
+  float: left
+  margin: 4px 9px 0 0
+
+img.image_left
+  width: 330px
 
 #content
   .lavoro 
