added news index

--- a/app/views/user_mailer/welcome.haml
+++ b/app/views/user_mailer/welcome.haml
@@ -1,6 +1,6 @@
 %p Ciao #{@user.first_name},
 
-%p grazie di esserti registrato al nostro sito, potrai scaricare i PDF dei corsi e accedere a tutte le informazioni effettuando il login da: 
+%p grazie di esserti registrato/a al nostro sito, potrai scaricare i PDF dei corsi e accedere a tutte le informazioni effettuando il login da: 
 
 %p
   = link_to "accademia-cappiello.it/login", "http://accademia-cappiello.it/login"
