--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -1011,7 +1011,11 @@ img.image_left
 .pagination
   margin: 10px 0
   
-  
+
+#articles_index
+  li
+    display: block
+
 #tabs_lavoro
   padding-left: 18px
   table
