--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -1,4 +1,4 @@
-- link = articl_path(article)
+- link = article_path(article)
 %li  
   - text = "<span class='title'>#{tr(article).title}</span> <span class='date'>#{I18n.l(article.created_at.to_date, format: :custom)}</span>"
   = link_to text.html_safe, link
