--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -407,6 +407,10 @@ a#profile_name
   font-size: 0.7em
   float: right
   
+.articles.index .date
+  float: left
+  margin-right: 15px
+  
 #logo
   float: left
   +box-shadow(-3px, -3px, 10px, #777)
