--- a/app/views/sections/_articles.html.haml
+++ b/app/views/sections/_articles.html.haml
@@ -7,17 +7,19 @@
     - if admin?
       .insert_article
         = link_to "Inserisci News", new_article_path(article_type: "news")
+        |
+        = link_to "Lista News", news_path()
   .clear
-  /
-    %h5 
-      %span Eventi
-    .eventi
-      %ul
-        = render partial: "articles/article", collection: @events
-      - if admin?
-        .insert_article
-          = link_to "Inserisci Evento", new_article_path(article_type: "event")
-    .clear
+  -#
+  -# %h5 
+  -#   %span Eventi
+  -# .eventi
+  -#   %ul
+  -#     = render partial: "articles/article", collection: @events
+  -#   - if admin?
+  -#     .insert_article
+  -#       = link_to "Inserisci Evento", new_article_path(article_type: "event")
+  -# .clear
   
   .lavoro
     .box
