--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -249,12 +249,11 @@ a:hover
   ul li
     display: block
   a 
-    color: #000
+    color: #222
     text-shadow: 1px 2px 0px #FFF
   a:hover  
-    color: #eee
-    background: #777
-    text-shadow: -1px -2px 0px #111
+    color: #000
+    text-shadow: 0px -1px 1px #ddd
 
 #content p
   text-shadow: 1px 2px 0px #FFF
@@ -399,7 +398,6 @@ a#profile_name
     float: right
     
   a:hover .date
-    color: #333
     
   
 .articles.show .date
