added grafica editoriale

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -14,6 +14,8 @@
       = f.label     :int_brevi_visual,    "#{tf "corsi brevi", "short courses"} - VISUAL DESIGN"
       = f.check_box :int_brevi_interior
       = f.label     :int_brevi_interior,  "#{tf "corsi brevi", "short courses"} - INTERIOR DESIGN"
+      = f.check_box :int_brevi_graphic
+      = f.label     :int_brevi_graphic,  "#{tf "corsi brevi", "short courses"} - GRAFICA EDITORIALE"
     
       %h3= tf("RICHIESTA DI PARTECIPAZIONE GRATUITA", "REQUEST FREE PARTICIPATION")
       = f.check_box :int_stage_visual
