--- a/app/views/users/_user_infos.html.haml
+++ b/app/views/users/_user_infos.html.haml
@@ -5,6 +5,7 @@
   - show_selection :int_annuali_interior, "Corso annuale Interior Design"
   - show_selection :int_brevi_visual, "Corsi brevi Visual Design"
   - show_selection :int_brevi_interior, "Corsi brevi Interior Design"
+  - show_selection :int_brevi_graphic, "Corsi brevi Grafica Editoriale"
 
   %h3 Voglio partecipare a:
 
