--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -263,6 +263,10 @@ a:hover
 #content .master p  
   width: 59%  
   
+.flex 
+  width: 53% 
+
+  
 #content .home p, #content .news p, #content #aside p, #content .article_cont p
   width: 100%
 
