--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -125,6 +125,9 @@ a:hover {
 #content .master p {
   width: 59%; }
 
+img.flex {
+  width: 53%; }
+
 #content .home p, #content .news p, #content #aside p, #content .article_cont p {
   width: 100%; }
 
