--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -503,7 +503,13 @@ div#home_swf
   text-align: right
   img
     width: 24px
-  
+
+
+.chrome #nav li a 
+  width: 86%
+.ie #nav li a 
+  width: 83%
+
 #nav 
   text-transform: uppercase
   +box-shadow(-3px, 0px, 5px, #AAA)
@@ -521,7 +527,6 @@ div#home_swf
       border-top: 1px solid $main
       border-bottom: 1px solid $main
       width: 84% // safari
-      width: 83% // ie
       text-align: right
   li .subnav
     display: none
