--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -505,6 +505,10 @@ div#home_swf
     width: 24px
 
 
+#map_canvas
+  width: 485px
+  height: 320px
+
 .chrome #nav li a 
   width: 86%
 .ie #nav li a 
