--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,29 @@
         });
         setTimeout(hide_flashes, 3000)
       });
-        
+    - if @page && @page.id == 9 # contacts
+      %script{ src: "http://maps.google.com/maps/api/js?sensor=false" }
+      %script{ type: "text/javascript" }
+        :plain
+          $(function(){
+            function gmap() {
+              var mapDiv = document.getElementById('map_canvas')
+              var latLng = new google.maps.LatLng(43.76389, 11.269234)
+              var map = new google.maps.Map(mapDiv, {
+                center: latLng,
+                zoom: 15,
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+              })
+                console.log(map)
+              var marker = new google.maps.Marker({
+                position: latLng,
+                map: map
+              })
+            }
+            
+            gmap()
+          })
+          
     - if Rails.env == "production" && !analytics_tracker.blank?
       = render partial: "layouts/analytics"
   %body{ class: "#{controller.controller_name} #{controller.action_name} #{"master" if master?} #{"admin" if admin?}"}
