--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -27,7 +27,7 @@
 
 
     #social
-      = link_to image_tag("icons/fb_icon.png"), "http://www.facebook.com/group.php?gid=25010319906"
+      = link_to image_tag("icons/fb_icon.png"), "https://www.facebook.com/accademiaartedesigncappiello"
       -# "http://www.facebook.com/pages/Accademia-dArte-e-Design-Leonetto-Cappiello-Firenze/124282164308467"
       = link_to image_tag("icons/vimeo_icon.png"), "http://vimeo.com/user5798268"
       = link_to image_tag("icons/flickr_icon.png"), "http://www.flickr.com/photos/accademiacappiello/"
