--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,12 @@
     %meta{ name: 'csrf-token', content: form_authenticity_token}/
     %meta{ name: 'csrf-param', content: 'authenticity_token'}/
     %meta{ name: "google-site-verification", content: "WT1zivsvBTN6dzfaJhbL5JKgi5K__Te3cCcSt3VL6Uw" }/
+    %meta{ property: "og:title", content: "Accademia Cappiello" }
+    %meta{ property: "og:url", content: "http://accademia-cappiello.it" }/
+    %meta{ property: "og:type", content: "website" }/
+    %meta{ property: "og:site_name", content: "Accademia Cappiello" }/
+    %meta{ property: "og:image", content: "http://accademia-cappiello.it/images/logo_square.png" }/
+    %meta{ property: "fb:admins", content: "makevoid" }/
     = stylesheet_link_tag "main", 'fancybox'#, :cache =>  "cache/all"       
     = javascript_include_tag "jquery", "jquery-cycle", "jquery-swfobject", "jquery-hoverintent","jquery-flickr", "jquery-mousewheel", "jquery-fancybox", "jquery-validation", "rails", "master"#, :cache => "cache/all" 
     = yield :head
