--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -1055,3 +1055,9 @@ img.image_left
         padding-bottom: 4px
         background: #c00
         color: #FFF
+
+.fb_like
+  clear: left
+  padding: 20px 0 0
+  iframe
+    background: #E9E9E9
