--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -30,8 +30,9 @@
     =# raise NotFound
 
 .fb_like
+  - like_url = home_page? ? root_url : root_url+"pages/"+@page.send("title_url_#{current_lang}")
   :plain
-    <fb:like href="#{root_url+"pages/"+@page.send("title_url_#{current_lang}")}" send="true" width="400" show_faces="true"></fb:like>
+    <fb:like href="#{like_url}" send="true" width="400" show_faces="true"></fb:like>
 
 -# if admin?
 - content_for :admin do
