--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -31,7 +31,7 @@
 
 .fb_like
   :plain
-    <fb:like href="#{request.host+request.fullpath}" send="true" width="400" show_faces="true"></fb:like>
+    <fb:like href="#{request_url}" send="true" width="400" show_faces="true"></fb:like>
 
 -# if admin?
 - content_for :admin do
