--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,7 @@
     %meta{ property: "og:image", content: "http://accademia-cappiello.it/images/logo.png" }/
     %meta{ property: "og:description", content: meta_description }/
     %meta{ property: "og:url", content: request_url }/
-    %meta{ property: "fb:admins", content: "makevoid" }/
+    %meta{ property: "fb:admins", content: "1218562195" }/
     = stylesheet_link_tag "main", 'fancybox'#, :cache =>  "cache/all"
     = javascript_include_tag "jquery", "jquery-cycle", "jquery-swfobject", "jquery-hoverintent","jquery-flickr", "jquery-mousewheel", "jquery-fancybox", "jquery-validation", "rails", "master"#, :cache => "cache/all"
     = yield :head
