--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -661,7 +661,8 @@ $video_home_width: 360px
 $video_home_height: 270px
 #video
   float: right
-  margin: 0 2px 5px 15px
+  margin: 8px 2px 5px 15px
+  clear: right
   iframe 
     width: $video_width
     height: $video_height
