--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -11,4 +11,7 @@
   = f.text_field :email
   = f.label :password, "Password"
   = f.password_field :password
+  
+  = f.check_box :newsletter
+  = f.label     :newsletter,  tf("desidero ricevere informazioni su iniziative e nuovi corsi", "I want to receive information about new courses")
   = f.submit "Registrati", class: "submit"
