--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -58,7 +58,7 @@
         = f.label     :newsletter,  tf("Newsletter - tieniti informato su nuovi corsi ed iniziative", "Newsletter - stay informed about new courses and events")
     
         = check_box_tag :authorize
-        = label_tag     :authorize,  tf("autorizzo il trattamento dei dati personali", "I authorize the processing of personal data")
+        = label_tag     :authorize,  tf("autorizzo il trattamento dei dati personali", "I authorize the use of my personal data")
       .clear
     
     
